--- a/src/app/tooling/components/sbo/sbo.component.html
+++ b/src/app/tooling/components/sbo/sbo.component.html
@@ -18,7 +18,7 @@
         <ion-row>
             <ion-col size="3">
                 <div class="aircraft-type">
-                    Type avion : {{spec.controls.aircraftProgram.value}}
+                    Type avion : {{spec.aircraftProgram}}
                 </div>
             </ion-col>
             <ion-col size="9">
@@ -73,13 +73,13 @@
             <ion-col size="1"></ion-col>
             <ion-col size="2"></ion-col>
             <ion-col size="4">
-                <div class="title"> {{spec.controls.title.value}}</div>
-                <div class="content">{{spec.controls.description.value}}</div>
+                <div class="title"> {{spec.title}}</div>
+                <div class="content">{{spec.description}}</div>
             </ion-col>
             <ion-col size="1"></ion-col>
             <ion-col size="1"></ion-col>
             <ion-col size="1"></ion-col>
-            <ion-col size="1">{{spec.controls.needDate.value | date: 'dd/MM/yyyy'}}</ion-col>
+            <ion-col size="1">{{spec.dateBesoin| date: 'dd/MM/yyyy'}}</ion-col>
         </ion-row>
     </ion-grid>
 </div>
