--- a/src/app/tooling/components/maintenance-reparation/maintenance-item-form/maintenance-item-form.component.html
+++ b/src/app/tooling/components/maintenance-reparation/maintenance-item-form/maintenance-item-form.component.html
@@ -39,7 +39,8 @@
       Supprimer Item
     </ion-button>
   </ion-buttons>
-  <ion-item-group *ngIf="canUpdate">
+  <!-- <ion-item-group *ngIf="canUpdate"> -->
+  <ion-item-group>
     <ion-item-divider>
       <ion-label>Réalisation</ion-label>
     </ion-item-divider>
