--- a/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
+++ b/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
@@ -8,16 +8,11 @@
   </ion-header>
   <ion-content>
     <ion-list>
-
-
       <ion-item-divider>
         <ion-label color=secondary>Faire une demande</ion-label>
       </ion-item-divider>
-
-
-
       <ion-menu-toggle auto-hide="true">
-        <ion-item [disabled]="false" button routerDirection="forward" [routerLink]="'new-tool'"
+        <ion-item [disabled]="false" button routerDirection="forward" [routerLink]="['new-tool']"
           [style.boder-right]="'solid 4px yellow'">
           <ion-label>
             Nouvel outillage (SBO)
@@ -46,7 +41,7 @@
 
 
       <ion-menu-toggle auto-hide="true">
-        <ion-item [button]="true" routerDirection="forward" [routerLink]="'tool-request-list'">
+        <ion-item [button]="true" routerDirection="forward" [routerLink]="'./requests'">
           <ion-label>
             Liste des demandes outillages
           </ion-label>
