--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="newToolRequestsList$| async as toolRequests">
+<ng-container>
   <ion-menu-toggle menu="tool-request-menu">
     <ion-button>Click to open the menu</ion-button>
   </ion-menu-toggle>
@@ -11,30 +11,28 @@
       <ion-col size="3">Demandeur</ion-col>
       <!-- <ion-col size="3" sort="">Date de besoin</ion-col> -->
     </ion-row>
-    <ion-row *ngFor="let request of toolRequests" appDataRow [isUrgent]="request.bloquantProd"
-      (click)="openRequestClick(request)">
+    @for (toolRequest of toolRequestList(); track $index) {
+    <ion-row appDataRow [isUrgent]="toolRequest.bloquantProd" (click)="openRequestClick(toolRequest)">
       <ion-col size="1">
-        <div class="circle" [style.border]="getBorder(request)">
-          {{request.id}}
-        </div>
-      </ion-col>
-      <ion-col size="2">{{ request.statut }}</ion-col>
-      <ion-col size="8">
-        <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
-          {{request.controle.outillage.designation}}</ion-label>
-        <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
-          {{request.maintenance.outillage.designation}}</ion-label>
-      </ion-col>
-      <ion-col size="4"> {{request.createdAt | date :"EE dd MMM yyyy":"local" }}</ion-col>
-      <ion-col size="3" (click)="userClick()">
-        <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
-        <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
-      </ion-col>
-      <!-- <ion-col size="3"> -->
-      <!-- <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
-        <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
-        </ion-label> -->
-      <!-- </ion-col> -->
-    </ion-row>
+          <div class="circle" [style.border]="getBorder(toolRequest)">
+            {{toolRequest.id}}
+          </div>
+          </ion-col>
+        <ion-col size="2">{{ toolRequest.statut }}</ion-col>
+        <ion-col size="8">
+        <ion-label>OT{{toolRequest.outillage.sapToolNumber}} -
+          {{toolRequest.outillage.designation}}</ion-label>
+        </ion-col>
+        <ion-col size="4"> {{toolRequest.createdAt | date :"EE dd MMM yyyy":"local" }}</ion-col>
+        <ion-col size="3" (click)="userClick()">
+          <ion-label>{{toolRequest.demandeur.nom}}</ion-label>
+          </ion-col>
+          <!-- <ion-col size="3"> -->
+          <!-- <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
+                            <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
+                            </ion-label> -->
+          <!-- </ion-col> -->
+          </ion-row>
+    }
   </ion-grid>
 </ng-container>
