--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,15 +1,3 @@
-// @use '@angular/material' as mat;
-
-// html {
-//   color-scheme: light dark;
-//   @include mat.theme((
-//     color: mat.$violet-palette,
-//     typography: Roboto,
-//     density: 0
-//   ));
-// }
-
-
 /** Ionic CSS Variables **/
 
 :root {
@@ -78,54 +66,6 @@
     --ion-color-light-contrast-rgb: 0, 0, 0;
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
-    // --ion-color-primary: #00325F;
-    // --ion-color-primary-rgb: 0, 50, 95;
-    // --ion-color-primary-contrast: #ffffff;
-    // --ion-color-primary-contrast-rgb: 255, 255, 255;
-    // --ion-color-primary-shade: #002c54;
-    // --ion-color-primary-tint: #1a476f;
-    // --ion-color-secondary: #5260ff;
-    // --ion-color-secondary-rgb: 82, 96, 255;
-    // --ion-color-secondary-contrast: #ffffff;
-    // --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    // --ion-color-secondary-shade: #4854e0;
-    // --ion-color-secondary-tint: #6370ff;
-    // --ion-color-tertiary: #5260ff;
-    // --ion-color-tertiary-rgb: 82, 96, 255;
-    // --ion-color-tertiary-contrast: #ffffff;
-    // --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    // --ion-color-tertiary-shade: #4854e0;
-    // --ion-color-tertiary-tint: #6370ff;
-    // --ion-color-success: #49E678;
-    // --ion-color-success-rgb: 73, 230, 120;
-    // --ion-color-success-contrast: #000000;
-    // --ion-color-success-contrast-rgb: 0, 0, 0;
-    // --ion-color-success-shade: #40ca6a;
-    // --ion-color-success-tint: #5be986;
-    // --ion-color-warning: #ffc409;
-    // --ion-color-warning-rgb: 255, 196, 9;
-    // --ion-color-warning-contrast: #000000;
-    // --ion-color-warning-contrast-rgb: 0, 0, 0;
-    // --ion-color-warning-shade: #e0ac08;
-    // --ion-color-warning-tint: #ffca22;
-    // --ion-color-danger: #E60032;
-    // --ion-color-danger-rgb: 230, 0, 50;
-    // --ion-color-danger-contrast: #ffffff;
-    // --ion-color-danger-contrast-rgb: 255, 255, 255;
-    // --ion-color-danger-shade: #ca002c;
-    // --ion-color-danger-tint: #e91a47;
-    // --ion-color-medium: #92949c;
-    // --ion-color-medium-rgb: 146, 148, 156;
-    // --ion-color-medium-contrast: #000000;
-    // --ion-color-medium-contrast-rgb: 0, 0, 0;
-    // --ion-color-medium-shade: #808289;
-    // --ion-color-medium-tint: #9d9fa6;
-    // --ion-color-light: #f4f5f8;
-    // --ion-color-light-rgb: 244, 245, 248;
-    // --ion-color-light-contrast: #000000;
-    // --ion-color-light-contrast-rgb: 0, 0, 0;
-    // --ion-color-light-shade: #d7d8da;
-    // --ion-color-light-tint: #f5f6f9;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -269,4 +209,5 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 10px;
 }
