--- a/src/app/tooling/components/tool-requests/tool-requests.page.html
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.html
@@ -4,7 +4,7 @@
     <ion-button color=secondary slot=end (click)="nextClick()" expand="block" fill="outline">
       Charger plus de demandes
     </ion-button>
-    <ion-button color=secondary slot=end (click)="reloadClick()">
+    <ion-button color=secondary slot=end (click)="reloadRequestList()" [disabled]="isLoadingList()">
       <ion-icon slot="start" name="refresh-circle-outline"></ion-icon>
       Recharger
     </ion-button>
