navigation from toolRequest list fixed

--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
@@ -1,7 +1,7 @@
 <ng-container>
-  <ion-menu-toggle menu="tool-request-menu">
+  <!-- <ion-menu-toggle menu="tool-request-menu">
     <ion-button>Click to open the menu</ion-button>
-  </ion-menu-toggle>
+  </ion-menu-toggle> -->
   <ion-grid [fixed]="false">
     <ion-row appHeaderRow>
       <ion-col size="1"></ion-col>
